# JUCEMidiCatalina

./: CMakeLists.txt
Apps/: CMakeLists.txt
Apps/GUIApp/: CMakeLists.txt  MainComponent.cpp
Plugins/: CMakeLists.txt
Plugins/MIDICatalinaBug/: CMakeLists.txt  Funky.midi  PluginProcessor.cpp
